ci-health/deploy/route.yaml
apiVersion: route.openshift.io/v1
kind: Route
metadata:
  name: ci-health
  labels:
    app: ci-health
spec:
  to:
    kind: Service
    name: ci-health
  port:
    targetPort: 8080
  tls:
    termination: edge
    insecureEdgeTerminationPolicy: Redirect
